# the-best-python-course

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: test-asm-builtins.yml
editing/: README.md  pyproject.toml  srt-from-json.py  srt-shift.py
editing/captions/14/: en.srt  ru.srt
editing/captions/15/: en.srt  ru.srt
editing/captions/6/: en.srt  ru.srt
editing/captions/7/: en.srt  ru.srt
homeworks/: 1-int.md  10-==.md  11-bytearray.md  12-tuple.md  13-print.md  14-steering-council.md  15-subinterpreters.md  2-+.md  3-what-is-python.md  4-bool.md  5-None.md  6-float.md  7-typeshed.md  8-bytes.md  9-variables.md
lectures/: 0-intro.key  1-int.key  4-bool.key  5-None.key  README.md
minimal_vscode/: README.md
minimal_vscode/dumplings/: README.md  docker-compose.yaml  simple.cook  student.cook  traditional.cook
minimal_vscode/dumplings/.cooklang/: config.toml
minimal_vscode/links/: 1-open-vscode.md  2-activity-bar.md  3-tabs-and-dumplings.md
practice/asm-builtins/asm_builtins/: mod.c
practice/asm_builtins/: .editorconfig  README.md  pyproject.toml
